# authentication-infrastructure

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  dns-records-signin-build.json  dns-records-signin-integration.json  dns-records-signin-prod.json  dns-records-signin-production.json  dns-records-signin-staging.json  list-records-Z02212762LL4X7ZM4JYAT-edited.json  migrate-record-set.sh  provision-build.sh  provision-cloudfront-build.sh  provision-cloudfront.sh  provision-dev.sh  provision-integration.sh  provision-old-dev.sh  provision-oldbuild.sh  provision-oldstaging.sh  provision-production.sh  provision-staging.sh  provisioner-cache.sh  provisioner.sh  sync-dependencies.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pre-commit.yml  (+1 more)
ad-hoc-tests/: ad-hoc-tests.yaml  deploy.sh  parameters-build.json  parameters-dev.json
alerts/: template.yaml
certificate/: template.yaml
cloudfront-distribution/: template.yaml
deployment-configs/: template.yaml
orch-stub-repository/: template.yaml
pipeline-visualiser/: Dockerfile  Dockerfile.local  Gemfile  Makefile  README.md  background_pipeline_status_updates.rb  config.yml  deploy.sh  index.rb  infrastructure.yaml
pruner/: lambda-version-pruner.yml
pytools/lambdacompare/: README.md  pyproject.toml
pytools/lambdacompare/lambdacompare/: __init__.py  compare_lambda_migration.py
scripts/: compare-lambdas.sh  migrate-record-set.sh  read_cloudformation_stack_outputs.sh  read_parameters.sh  read_secrets.sh  write_mappings.sh  write_parameters.sh  write_secrets.sh
(+229 files in other folders)
